--- a/import/asana/package.json
+++ b/import/asana/package.json
@@ -13,15 +13,12 @@
   "keywords": [],
   "author": "",
   "devDependencies": {
-    "@types/minimist": "^1.2.1",
     "@types/node": "^14.14.28",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
-    "eslint": "^7.20.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.4"
   },
   "dependencies": {
-    "minimist": "^1.2.6"
+    "@sapphire/fetch": "^2.4.1",
+    "prompt-sync": "^4.2.0"
   }
 }
